partitioner (0.20) UNRELEASED; urgency=low

  * Bastian Blank
    - Use sector size for size calculation.
    - Ignore ignorable exceptions.
  * Translations:
    - Dafydd Harries : Added Welsh translation (cy.po)

 -- Bastian Blank <waldi@debian.org>  Fri, 05 Mar 2004 17:56:46 +0100

partitioner (0.19) unstable; urgency=low

  * Jeff Bailey:
    - Apply patch from Thomas Poindessous <thomas@poindessous.com>
      for sparc partitioning (Closes: #228518)
    - Actually, use parted instead.
  * Translations:
    - Håvard Korsvoll
      - Updated Norwegian (Nynorsk) translation.
    - Changwoo Ryu
      - Added Korean translation (ko.po)
    - Ming Hua
      - Initial Traditional Chinese translation (zh_TW.po), by Tetralet
      - Updated Traditional Chinese translation (zh_TW.po), by Tetralet
    - Håvard Korsvoll
      - Updated Norwegian, bokmål translation, (nb.po). From Axel Bojer

 -- Joey Hess <joeyh@debian.org>  Tue,  2 Mar 2004 13:42:00 -0500

partitioner (0.18) unstable; urgency=low

  * Translations:
    - Jordi Mallach: Updated Catalan translation.
    - Carlos Z.F. Liu
      - fix some serious errors in Simplified Chinese translation.
    - Giuseppe Sacco
      - Applied patch for normalizing menus and some italian translation (it.po)
    - h3li0s
      - added albanian translation (sq.po)
    - Eugen Meshcheryakov 
      - added Ukrainian translation (uk.po)

 -- Joey Hess <joeyh@debian.org>  Sun, 22 Feb 2004 22:21:37 -0500

partitioner (0.17) unstable; urgency=low

  * Safir Secerovic
    - Update Bosnian translation (bs.po).
  * Stephen R. Marenka
    - Initial m68k support.

 -- Joey Hess <joeyh@debian.org>  Thu, 22 Jan 2004 20:17:38 -0500

partitioner (0.16) unstable; urgency=low

  * Miguel Figueiredo
    - Added Portuguese translation (pt.po)
  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
  * Bart Cornelis
    - Merged Norwegian Nynorsk (nn.po) translation from skolelinux-cvs
  * André Dahlqvist